--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,4 @@
 RewriteEngine On
-RewriteCond %{HTTP} off
-RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteRule ^(.*)$ index.php/$1 [L]
